k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-otus-k8s-hw
spec:
  type: ClusterIP
  selector:
    app: otus-k8s-hw
  ports:
    - protocol: TCP
      port: 8000
      targetPort: otus-http
